<resources>
    <string name="app_name">SaveApp</string>
    <string name="budget">Budget</string>
    <string name="content_description_budget">Budget button</string>
    <string name="home">Home</string>
    <string name="content_description_home">Home button</string>
    <string name="history">History</string>
    <string name="content_description_history">History button</string>
    <string name="stats">Stats</string>
    <string name="content_description_stats">Stats button</string>
    <string name="new_transaction">New transaction</string>
    <string name="transaction">Transaction</string>
    <string name="bets">Bets</string>
    <string name="clothes">Clothes</string>
    <string name="culture">Culture</string>
    <string name="entertainment">Entertainment</string>
    <string name="food">Food</string>
    <string name="gifts">Gifts</string>
    <string name="holidays">Holidays</string>
    <string name="personal_care">Personal Care</string>
    <string name="others">Others</string>
    <string name="sport">Sport</string>
    <string name="tech">Tech</string>
    <string name="transports">Transports</string>
    <string name="searchbar_hint">Find</string>
    <string name="amount_hint">Amount</string>
    <string name="is_subscription">Is a subscription?</string>
    <string name="date_hint">Date</string>
    <string name="description_hint">Description</string>
    <string name="budget_hint">Budget</string>
    <string name="tag_hint">Tag</string>
    <string name="renewal_hint">Renewal</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="emptyString"> </string>
    <string name="WEEKLY">Weekly</string>
    <string name="MONTHLY">Monthly</string>
    <string name="BIMONTHLY">Bimonthly</string>
    <string name="QUARTERLY">Quarterly</string>
    <string name="SEMIANNUALLY">Semiannually</string>
    <string name="YEARLY">Yearly</string>
    <string name="choose_date">Choose a date</string>
    <string name="amount_error">Amount is not valid</string>
    <string name="description_error">Description is empty</string>
    <string name="payment_of">Payment of %1$s %2$s</string>
    <string name="change_sorting">Change sorting order</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="vertical_arrow">Vertical arrow</string>
    <string name="history_clock">History clock</string>
    <string name="settings">Settings</string>
    <string name="net_worth">Net worth</string>
    <string name="life">Life</string>
    <string name="summary">Summary</string>
    <string name="tag_color">Tag color pill</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="income">Income</string>
    <string name="january">JAN</string>
    <string name="february">FEB</string>
    <string name="march">MAR</string>
    <string name="april">APR</string>
    <string name="may">MAY</string>
    <string name="june">JUN</string>
    <string name="july">JUL</string>
    <string name="august">AUG</string>
    <string name="september">SEP</string>
    <string name="october">OCT</string>
    <string name="november">NOV</string>
    <string name="december">DEC</string>
    <string name="from_display">From: %s</string>
    <string name="to_display">To: %s</string>
    <string name="active_budgets">Active budgets</string>
    <string name="filled_budgets">Filled budgets</string>
    <string name="name_hint">Name</string>
    <string name="from_date_hint">From date</string>
    <string name="to_date_hint">To date</string>
    <string name="new_budget">New budget</string>
    <string name="wallet">Wallet</string>
    <string name="name_error">Name is empty</string>
    <string name="initial_date">Initial date</string>
    <string name="ending_date">Ending date</string>
    <string name="report">Report</string>
    <string name="credits">Credits</string>
    <string name="export_data">Export</string>
    <string name="import_data">Import</string>
    <string name="template">Template</string>
    <string name="currencies_notice">Currencies rates are updated on a daily basis.</string>
    <string name="set_default_currency">Set default currency</string>
    <string name="set_default_currency_description">Transactions in other currencies will be converted to the default one using the exchange rates of the European Central Bank.</string>
    <string name="about">About</string>
    <string name="currencies">Currencies</string>
    <string name="budgets">Budgets</string>
    <string name="transactions">Transactions</string>
    <string name="about_description">SaveApp is an open-source Android app that helps keep track of expenses. SaveApp stores data exclusively locally and does not collect any information about the user.</string>
    <string name="manage_transactions">Manage transactions using spreadsheets. Import and export data using [.csv] files.</string>
    <string name="manage_subscriptions">Manage subscriptions using spreadsheets. Import and export data using [.csv] files.</string>
    <string name="manage_budgets">Manage budgets using spreadsheets. Import and export data using [.csv] files.</string>
    <string name="transactions_file_name">Transactions_%s</string>
    <string name="subscriptions_file_name">Subscriptions_%s</string>
    <string name="budgets_file_name">Budgets_%s</string>
    <string name="transactions_export_header">ID,AMOUNT,DESCRIPTION,DATE,TAG_ID,BUDGET_ID</string>
    <string name="subscriptions_export_header">ID,AMOUNT,DESCRIPTION,RENEWAL_TYPE,CREATION_DATE,LAST_PAID,NEXT_RENEWAL,TAG_ID,BUDGET_ID</string>
    <string name="budgets_export_header">ID,MAX,USED,NAME,FROM,TO,TAG_ID</string>
    <string name="transactions_template">Transactions_Template</string>
    <string name="subscriptions_template">Subscriptions_Template</string>
    <string name="budgets_template">Budgets_Template</string>
    <string name="active_subscriptions">Active subscriptions:</string>
    <string name="monthly_expense">Monthly expense:</string>
    <string name="yearly_expense">Yearly expense:</string>
    <string name="by_tag">By tag</string>
    <string name="by_month">By month</string>
    <string name="by_year">By year</string>
    <string name="statistics">Statistics</string>
    <string name="expenses_by_tag">Expenses by tag</string>
    <string name="expenses_by_month">Expenses by month</string>
    <string name="january_name">January</string>
    <string name="february_name">February</string>
    <string name="march_name">March</string>
    <string name="april_name">April</string>
    <string name="may_name">May</string>
    <string name="june_name">June</string>
    <string name="july_name">July</string>
    <string name="august_name">August</string>
    <string name="september_name">September</string>
    <string name="october_name">October</string>
    <string name="november_name">November</string>
    <string name="december_name">December</string>
    <string name="transaction_deleted">Transaction deleted.</string>
    <string name="subscription_deleted">Subscription deleted.</string>
    <string name="budget_deleted">Budget deleted.</string>
    <string name="undo">Undo</string>
    <string name="transaction_created">Transaction created.</string>
    <string name="subscription_created">Subscription created.</string>
    <string name="budget_created">Budget created.</string>
    <string name="budget_not_exists_error">Can\'t create transaction. Budget does not exist.</string>
    <string name="budget_empty_error">Can\'t create transaction. Budget is empty.</string>
    <string name="budget_date_error">Can\'t create transaction. Date is not valid for the budget.</string>
    <string name="transaction_updated">Transaction updated.</string>
    <string name="subscription_updated">Subscription updated.</string>
    <string name="budget_updated">Budget updated.</string>
    <string name="used_hint">Used</string>
    <string name="used_not_valid">Used is not valid</string>
    <string name="year">Year</string>
    <string name="no_data_available">No data available</string>
    <string name="clear">Clear</string>
    <string name="tag_error">Select a tag</string>
    <string name="warning">Warning</string>
    <string name="dialog_continue">Continue</string>
    <string name="change_default_currency_alert_message">This operation will affect all saved data and may take long to run. Closing SaveApp while this task is still running will make your data inconsistent. Would you like to continue?</string>
    <string name="default_currency_updated">Default currency updated</string>
    <string name="tags">Tags</string>
    <string name="manage">Manage</string>
    <string name="tag_card_description">Tags provide a convenient way to organize your data.</string>
    <string name="manage_tags">Manage tags</string>
    <string name="tag">Tag</string>
    <string name="new_tag">New tag</string>
    <string name="tag_deleted">Tag deleted.</string>
    <string name="name_already_used">Name is already in use</string>
    <string name="tag_created">Tag created.</string>
    <string name="tag_updated">Tag updated.</string>
    <string name="cannot_delete_tag_data">Cannot delete the tag. It is in use by other data.</string>
    <string name="tag_icon">Tag icon</string>
    <string name="download_transactions_template">Download transactions template</string>
    <string name="export_transactions">Export transactions</string>
    <string name="import_transactions">Import transactions</string>
    <string name="download_subscriptions_template">Download subscriptions template</string>
    <string name="export_subscriptions">Export subscriptions</string>
    <string name="import_subscriptions">Import subscriptions</string>
    <string name="download_budgets_template">Download budgets template</string>
    <string name="export_budgets">Export budgets</string>
    <string name="import_budgets">Import budgets</string>
    <string name="month_summary">Month summary</string>
    <string name="month_expenses">Month expenses</string>
    <string name="month_incomes">Month incomes</string>
    <string name="month_highest_tag">Month highest tag</string>
    <string name="year_summary">Month summary</string>
    <string name="year_expenses">Year expenses</string>
    <string name="year_incomes">Year incomes</string>
    <string name="year_highest_tag">Year highest tag</string>
    <string name="life_expenses">Life expenses</string>
    <string name="life_incomes">Life incomes</string>
    <string name="life_highest_tag">Life highest tag</string>
    <string name="month_tag_color_pill">Month tag color pill</string>
    <string name="year_tag_color_pill">Year tag color pill</string>
    <string name="life_tag_color_pill">Life tag color pill</string>
    <string name="settings_icon">Settings icon</string>
    <string name="new_budget_button">New budget button</string>
    <string name="show_past_budgets">Show past budgets</string>
    <string name="tag_color_picker">Tag color picker</string>
    <string name="increase_year_button">Increase year</string>
    <string name="decrease_year_button">Decrease year</string>
    <string name="subscriptions_icon">Subscriptions icon</string>
    <string name="to_date_not_valid_error">Date is before starting one</string>
    <string name="subscriptions_list_label">Subscription list</string>
    <string name="statistics_by_year_label">Statistics by year list</string>
    <string name="is_income_tag">Is income?</string>
    <string name="import_transactions_note">Note: to import new transactions, set their IDs to 0.</string>
    <string name="import_budgets_note">Note: to import new budgets, set their IDs to 0.</string>
    <string name="import_subscriptions_note">Note: to import new subscriptions, set their IDs to 0.</string>
    <string name="incomes_by_tag">Incomes by tag</string>
</resources>