<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/statistics_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/statistics_page_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/stats"
                app:srcCompat="@drawable/round_query_stats_24"
                app:tint="?attr/colorPrimaryVariant" />

            <TextView
                android:id="@+id/statistics_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/statistics_page_icon"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/statistics"
                android:textAppearance="?attr/textAppearanceHeadlineMedium"
                android:textColor="?attr/colorPrimaryVariant" />

        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/statsTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_tag" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_month" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_year" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/statsViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
