<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.ferrariofilippo.saveapp.converters.Converters" />

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.ferrariofilippo.saveapp.view.viewmodels.NewMovementViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/currencyInput"
            android:hint="@string/amount_hint"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:endIconMode="clear_text"
            app:prefixText="@{vm.currency.toSymbol()}">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:text="@={vm.amount}"
                android:textAlignment="textEnd" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currencyInput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amountInput"
            android:layout_marginVertical="12dp"
            android:hint="@string/description_hint"
            app:counterEnabled="true"
            app:counterMaxLength="64"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={vm.description}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionInput"
            android:hint="@string/date_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text="@{Converters.dateToString(vm.date)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budgetInput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateInput"
            android:layout_marginVertical="12dp"
            android:hint="@string/budget_hint">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tagInput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/budgetInput"
            android:hint="@string/tag_hint"
            android:visibility="@{vm.tag == null ? View.VISIBLE : View.GONE}">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/subscriptionSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagInput"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="4dp"
            android:checked="@={vm.isSubscription}"
            android:text="@string/is_subscription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/renewalInput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/subscriptionSwitch"
            android:layout_marginBottom="12dp"
            android:hint="@string/renewal_hint"
            android:visibility="@{vm.isSubscription ? View.VISIBLE : View.GONE}">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/renewalInput"
            android:layout_toStartOf="@id/saveButton"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/renewalInput"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:text="@string/save" />

    </RelativeLayout>
</layout>